# pcd-viewer

./: .gitignore  Missionlogic.md  README-DEPLOY.md  README.md  REFACTORING_SUMMARY.md  ROS_MSG_FLOW.md  connect_ros.sh  deploy_ros_simulator.sh  example.json  mission_msgs_simulator.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ros.md  ros_mission_simulator.py  test-db.ts  test-task-config.sh  test.html  todos.md  实时扫描点云.md
docs/: DATABASE_GUIDE.md  INTERACTION_FLOW.md  LEFT_PANEL_REFACTOR.md  README.md  ROS_TEST_GUIDE.md  ROS_TOPICS_SUMMARY.md  VOXEL_RENDERING_GUIDE.md  test_ros_connection.md
helloagents/: CHANGELOG.md  project.md
helloagents/history/: index.md
helloagents/wiki/: api.md  arch.md  data.md  overview.md  ros-msgs.md
mission_msgs/: CMakeLists.txt  package.xml
mission_msgs/action/: ExecuteMission.action
mission_msgs/msg/: Control.msg  HangarChargeStatus.msg  MissionList.msg  MissionStatus.msg  TaskOpt.msg  WaypointPosition.msg
public/: example-planned-path.json  example.json  rosbag_play.pcd
public/drone/: scene.bin:Zone.Identifier
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/uploads/: route.ts
src/components/: StartupPage.tsx
src/hooks/: useMissionDatabase.ts  useMissionRuntime.ts  useRosConnection.ts
src/lib/: db.ts  frameTransforms.ts  missionDao.ts  pointCloudParser.ts  taskTypes.ts  upload.ts  voxelizer.ts
src/types/: mission.ts  nest.ts
机库/msg/: NestAutoMode.msg  NestBattery.msg  NestOptCharge.msg  NestOptMode.msg  NestOptXMotor.msg  NestOptYMotor.msg  NestStatus.msg  Pos.msg  UavOn.msg
(+31 files in other folders)
